try to fix non visible gravatar -> picture in bio

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -75,7 +75,7 @@
 .amanox {
     position: center;
     width: 50%;
-    animation-duration: 4s;
+    animation-duration: 3s;
     animation-name: amanox;
     animation-timing-function: ease-out;
     animation-iteration-count: 1;
